L'ajout de la section testimonial

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="assets/bootstrap-icons/bootstrap-icons.css">
 
+    <!-- CSS File -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <!-- SWIPER CSS -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <!-- CSS File -->
-    <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body class="bg-light">
@@ -179,7 +181,7 @@
 
 
 <!-- Check availability form -->
-<div class="container">
+<div class="container availability-form">
   <div class="row">
     <div class="col-lg-12 bg-white shadow p-4 rounded">
       <h5 class="mb-4">Vérifier la disponibilité de la réservation</h5>
@@ -194,7 +196,7 @@
             <input type="date" class="form-control shadow-none">
           </div>
           <div class="col-lg-3 mb-3">
-            <label class="form-label" style="font-weight: 500;">Adult</label>
+            <label class="form-label" style="font-weight: 500;">Adultes</label>
             <select class="form-select shadow-none">
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -209,8 +211,8 @@
               <option value="3">Three</option>
             </select>
           </div>
-          <div class="col-lg-1">
-            <button type="submit" class="btn text-white shadow-none custom-bg">Soumettre</button>
+          <div class="col-lg-1 mb-lg-3 mt-2">
+            <button type="submit" class="btn text-white shadow-none custom-bg">Envoyer</button>
           </div>
         </div>
       </form>
@@ -219,29 +221,402 @@
 </div>
 
 
+
+
+<!-- OUR ROOMS -->
+<h2 class="mt-5 pt-4 mb4 text-center fw-bold">NOS CHAMBRES</h2>
+
+<div class="container">
+  <div class="row">
+
+    <div class="col-lg-4 col-md-6 my-3">
+      <div class="card border-0 shadow" style="max-width: 350px; margin: auto;">
+        <img src="assets/images/articles/art-5.jpg" alt="image de la chambre" class="card-img-top">
+        <div class="card-body">
+          <h5>Chambre simple</h5>
+          <h6 class="mb-4">$200 la nuit</h6>
+          <div class="features mb-4">
+            <h6 class="mb-1">Features</h6>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              2 chambres
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              2 Lits
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              1 Balcons
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              3 douches
+            </span>
+          </div>
+          <div class="facilities mb-4">
+            <h6 class="mb1">Facilities</h6>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              WiFi
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              Télévision
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              Salle à manger
+            </span>
+          </div>
+          <div class="rating mb-4">
+            <h6 class="mb1">Rating</h6>
+            <span class="badge rounded-pill bg-light">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+            </span>
+          </div>
+          <div class="d-flex justify-content-evenly mb-2">
+            <a href="#" class="btn btn-sm text-white custom-bg shadow-none">Visitez</a>
+            <a href="#" class="btn btn-sm btn-outline-dark shadow-none">Plus des details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 my-3">
+      <div class="card border-0 shadow" style="max-width: 350px; margin: auto;">
+        <img src="assets/images/articles/art-3.jpg" alt="image de la chambre" class="card-img-top">
+        <div class="card-body">
+          <h5>Chambre simple</h5>
+          <h6 class="mb-4">$200 la nuit</h6>
+          <div class="features mb-4">
+            <h6 class="mb-1">Features</h6>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              2 chambres
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              2 Lits
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              1 Balcons
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              3 douches
+            </span>
+          </div>
+          <div class="facilities mb-4">
+            <h6 class="mb1">Facilities</h6>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              WiFi
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              Télévision
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              Salle à manger
+            </span>
+          </div>
+          <div class="rating mb-4">
+            <h6 class="mb1">Rating</h6>
+            <span class="badge rounded-pill bg-light">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+            </span>
+          </div>
+          <div class="d-flex justify-content-evenly mb-2">
+            <a href="#" class="btn btn-sm text-white custom-bg shadow-none">Visitez</a>
+            <a href="#" class="btn btn-sm btn-outline-dark shadow-none">Plus des details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 my-3">
+      <div class="card border-0 shadow" style="max-width: 350px; margin: auto;">
+        <img src="assets/images/articles/art-9.jpg" alt="image de la chambre" class="card-img-top">
+        <div class="card-body">
+          <h5>Chambre simple</h5>
+          <h6 class="mb-4">$200 la nuit</h6>
+          <div class="features mb-4">
+            <h6 class="mb-1">Features</h6>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              2 chambres
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              2 Lits
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              1 Balcons
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              3 douches
+            </span>
+          </div>
+          <div class="facilities mb-4">
+            <h6 class="mb1">Facilities</h6>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              WiFi
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              Télévision
+            </span>
+            <span class="badge rounded-pill bg-light text-dark text-wrap">
+              Salle à manger
+            </span>
+          </div>
+          <div class="rating mb-4">
+            <h6 class="mb1">Rating</h6>
+            <span class="badge rounded-pill bg-light">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+            </span>
+          </div>
+          <div class="d-flex justify-content-evenly mb-2">
+            <a href="#" class="btn btn-sm text-white custom-bg shadow-none">Visitez</a>
+            <a href="#" class="btn btn-sm btn-outline-dark shadow-none">Plus des details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-lg-12 text-center mt-5">
+      <a href="#" class="btn btn-sm btn-outline-dark rounded-0-fw-bold shadoe-none">Plus des chambres >>></a>
+    </div>
+  </div>
+</div>
+
+
+
+
+<!-- OUR FACILITIES -->
+<h2 class="mt-5 pt-4 mb4 text-center fw-bold">NOS FACILITES</h2>
+
+<div class="container">
+  <div class="row justify-content-evenly px-lg-0 px-md-0 px-5">
+    <div class="col-lg-2 col-md-2 text-center bg-white rounded shadow py-4 my-3">
+      <i class="bi bi-wifi" style="font-size: 50px; font-weight: 700;"></i>
+      <h5 class="mt-3">WiFi</h5>
+    </div>
+    <div class="col-lg-2 col-md-2 text-center bg-white rounded shadow py-4 my-3">
+      <i class="bi bi-wifi" style="font-size: 50px; font-weight: 700;"></i>
+      <h5 class="mt-3">WiFi</h5>
+    </div>
+    <div class="col-lg-2 col-md-2 text-center bg-white rounded shadow py-4 my-3">
+      <i class="bi bi-wifi" style="font-size: 50px; font-weight: 700;"></i>
+      <h5 class="mt-3">WiFi</h5>
+    </div>
+    <div class="col-lg-2 col-md-2 text-center bg-white rounded shadow py-4 my-3">
+      <i class="bi bi-wifi" style="font-size: 50px; font-weight: 700;"></i>
+      <h5 class="mt-3">WiFi</h5>
+    </div>
+    <div class="col-lg-2 col-md-2 text-center bg-white rounded shadow py-4 my-3">
+      <i class="bi bi-wifi" style="font-size: 50px; font-weight: 700;"></i>
+      <h5 class="mt-3">WiFi</h5>
+    </div>
+    <div class="col-lg-12 text-center mt-5">
+      <a href="#" class="btn btn-sm btn-outline-dark rounded-0-fw-bold shadoe-none">Plus des facilités >>></a>
+    </div>
+  </div>
+</div>
+
+
+<!-- TEMOIGNAGES -->
+<h2 class="mt-5 pt-4 mb4 text-center fw-bold">NOS TEMOIGNAGES</h2>
+
+<div class="container mt-5">
+  <div class="swiper swiper-testimonials">
+    <div class="swiper-wrapper mb-5">
+
+      <div class="swiper-slide bg-white p-4">
+        <div class="profile d-flex align-items-center mb-3">
+          <i class="bi bi-star-fill text-dark"></i>
+          <h6 class="m-0 ms-2">Cliente Pierette</h6>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+          Ipsam porro iusto odit dolores aliquid adipisci. Labore 
+          totam eligendi numquam consequatur.
+        </p>
+        <div class="rating">
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide bg-white p-4">
+        <div class="profile d-flex align-items-center mb-3">
+          <i class="bi bi-star-fill text-dark"></i>
+          <h6 class="m-0 ms-2">Cliente Benie</h6>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+          Ipsam porro iusto odit dolores aliquid adipisci. Labore 
+          totam eligendi numquam consequatur.
+        </p>
+        <div class="rating">
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide bg-white p-4">
+        <div class="profile d-flex align-items-center mb-3">
+          <i class="bi bi-star-fill text-dark"></i>
+          <h6 class="m-0 ms-2">Client Michel</h6>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+          Ipsam porro iusto odit dolores aliquid adipisci. Labore 
+          totam eligendi numquam consequatur.
+        </p>
+        <div class="rating">
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide bg-white p-4">
+        <div class="profile d-flex align-items-center mb-3">
+          <i class="bi bi-star-fill text-dark"></i>
+          <h6 class="m-0 ms-2">Client Pistice</h6>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+          Ipsam porro iusto odit dolores aliquid adipisci. Labore 
+          totam eligendi numquam consequatur.
+        </p>
+        <div class="rating">
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+          <i class="bi bi-star-fill text-warning"></i>
+        </div>
+      </div>
+
+    </div>
+    
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+
+
+<!-- Reach Us -->
+<h2 class="mt-5 pt-4 mb4 text-center fw-bold">Google Maps</h2>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-mb-8 p-4 mb-lg-0 mb-3 bg-white rounded">
+      <iframe class="w-100 rounded" height="320" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3978.3553507350384!2d15.276746074019039!3d-4.344238646612962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a6a31f262cd2b05%3A0x595dfd9cb1a62ecf!2sH%C3%B4tel%20Gracia!5e0!3m2!1sen!2scd!4v1671706161194!5m2!1sen!2scd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="col-lg-4 col-mb-4">
+      <div class="bg-white p-4 rounded mb-4">
+        <h5>Appelez Nous</h5>
+        <a href="tel: 0824775595" class="d-inline-block mb-2 text-decoration-none text-dark"><i class="bi bi-telephone-fill"></i> +243 824 775 595</a>
+        <a href="tel: 0824775595" class="d-inline-block text-decoration-none text-dark"><i class="bi bi-telephone-fill"></i> +243 824 775 595</a>
+      </div>
+
+      <div class="bg-white p-4 rounded mb-4">
+        <h5>Suivez Nous</h5>
+        <a href="#" class="d-inline-block mb-3">
+          <span class="badge bg-light text-dark fs-6 p-2 text-decoration-none">
+            <i class="bi bi-twitter m-1"></i> Twitter
+          </span>
+        </a>
+        <br>
+        <a href="#" class="d-inline-block mb-3">
+          <span class="badge bg-light text-dark fs-6 p-2 text-decoration-none">
+            <i class="bi bi-instagram m-1"></i> Instagram
+          </span>
+        </a>
+        <br>
+        <a href="#" class="d-inline-block">
+          <span class="badge bg-light text-dark fs-6 p-2 text-decoration-none">
+            <i class="bi bi-facebook m-1"></i> Facebook
+          </span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <br><br><br>
 <br><br><br>
 
 
 
 
-
-
-
-
-
-
-
+  <!-- SWIPER JS -->
+  <script src="assets/JavaScript/swiper-bundle.min.js"></script>
   
 
   <!-- Bundle JS -->
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- SWIPER JS -->
-  <script src="assets/JavaScript/swiper-bundle.min.js"></script>
 
   <!-- FICHIER SOURCE JS -->
   <script src="assets/JavaScript/script.js"></script>
+
+  <script>
+      var swiper = new Swiper(".swiper-testimonials", {
+          effect: "coverflow",
+          grabCursor: true,
+          centeredSlides: true,
+          slidePerView: "auto",
+          slidePerView: "3",
+          loop: true,
+          coverflowEffect: {
+              rotate: 50,
+              stretch: 0,
+              depth: 100,
+              modifier: 1,
+              slideShadows: false,
+          },
+          pagination: {
+              el: ".swiper-pagination",
+          },
+          breakpoints: {
+            320: {
+              slidePerView: 1,
+            },
+            640: {
+              slidePerView: 1,
+            },
+            768: {
+              slidePerView: 2,
+            },
+            1024: {
+              slidePerView: 3,
+            },
+          }
+        });
+  </script>
     
 </body>
 </html>
