--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
 <nav class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-sm sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand me-5 fw-bold fs-3" href="./index.php">Hotel Grace</a>
+    <a class="navbar-brand me-5 fw-bold fs-3" href="./index.php">Hotel Gracia</a>
     <button class="navbar-toggler  shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -552,22 +552,44 @@
 
 
 
+<div class="container-fluid bg-white mt-5">
+  <div class="row">
+    <div class="col-lg-4 p-4">
+      <h3 class="fw-bold fs-3 mb-2">Hotel Gracia</h3>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsa 
+      assumenda fuga! Velit, a? Facilis, alias ex. Quaerat quasi harum atque 
+      assumenda, optio eveniet iusto non obcaecati nemo exercitationem officiis.
+    </div>
+    <div class="col-lg-4 p-4">
+      <h5 class="mb-3">Liens Utiles</h5>
+      <a href="" class="d-inline-block mb-2 text-dark text-decoration-none">Accueil</a> <br>
+      <a href="" class="d-inline-block mb-2 text-dark text-decoration-none">Chambres</a> <br>
+      <a href="" class="d-inline-block mb-2 text-dark text-decoration-none">Reservations</a> <br>
+      <a href="" class="d-inline-block mb-2 text-dark text-decoration-none">Nous Contactez</a> <br>
+      <a href="" class="d-inline-block mb-2 text-dark text-decoration-none">A Propos</a>
+    </div>
+    <div class="col-lg-4 p-4">
+      <h5 class="mb-3">Suivez Nous</h5>
+      <a href="" class="d-inline-block text-dark text-decoration-none mb-2">
+        <i class="bi bi-twitter me-1"></i>Twitter
+      </a> <br>
+      <a href="" class="d-inline-block text-dark text-decoration-none mb-2">
+        <i class="bi bi-instagram me-1"></i>Instagram
+      </a> <br>
+      <a href="" class="d-inline-block text-dark text-decoration-none">
+        <i class="bi bi-facebook me-1"></i>Facebook
+      </a>
+      
+    </div>
+  </div>
+</div>
 
 
 
 
 
+<h6 class="text-center bg-dark text-white p-3 m-0">Designed and Developed by JKN Tech</h6>
 
-
-
-
-
-
-
-
-
-<br><br><br>
-<br><br><br>
 
 
 
